--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
               <div class="timetable-march__table-columns" style="height: 45rem;">4.03<span>11:00 - 12:00</span><span>Exotic</span><span>Anishuara</span></div>
               <div class="timetable-march__table-columns">11.03<span>11:00 - 12:00</span><span>Exotic</span><span>JULIA Wolf</span></div>
               <div class="timetable-march__table-columns">18.03<span>11:00 - 12:00</span><span>Exotic</span><span>Anishuara</span></div>
-              <div class="timetable-march__table-columns">25.03</div>
+              <div class="timetable-march__table-columns">25.03<span>11:00 - 12:00</span><span>Tricks</span><span>Diesel</span></div>
             </div>
             <div class="timetable-march__table-row">
               <div class="timetable-march__table-columns">Вторник</div>
@@ -975,7 +975,7 @@
               <div class="timetable-march__table-columns" style="height: 45rem;">6.03<span>15:00 - 16:00</span><span>Exotic Pole + Streching All Levels</span><span>JULIA WOLF</span></div>
               <div class="timetable-march__table-columns">13.03<span>15:00 - 16:00</span><span>Contemporary all levels</span><span>Diesel</span></div>
               <div class="timetable-march__table-columns">20.03<span>15:00 - 16:00</span><span>Exotic pole all levels</span><span>DIANA</span></div>
-              <div class="timetable-march__table-columns">27.03</div>
+              <div class="timetable-march__table-columns">27.03<span>20:30 - 21:30</span><span>Exotic Pole all levels</span><span>FOX</span></div>
             </div>
             <div class="timetable-march__table-row">
               <div class="timetable-march__table-columns">Четверг</div>
@@ -991,7 +991,7 @@
               <div class="timetable-march__table-columns" style="height: 45rem;">8.03<span>20:30 - 21:30</span><span>Exotic Pole All levels </span><span>Fox</span></div>
               <div class="timetable-march__table-columns">15.03<span>20:30 - 21:30</span><span>Exotic Pole all levels</span><span>Margo</span></div>
               <div class="timetable-march__table-columns">22.03<span>20:00 - 21:30</span><span>Exotic Pole all levels</span><span>Signe</span></div>
-              <div class="timetable-march__table-columns">29.03</div>
+              <div class="timetable-march__table-columns">29.03<span>20:30 - 21:30</span><span>Exotic Pole all levels</span><span>Sabina</span></div>
             </div>
             <div class="timetable-march__table-row">
               <div class="timetable-march__table-columns">Суббота</div>
